--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   TeamZero
 baseurl: "/TeamZero" # the subpath of your site, e.g. /blog/
-url: "http://TeamZero.github.io" # the base hostname & protocol for your site
+url: "https://jenwill394.github.io/TeamZero.github.io" # the base hostname & protocol for your site
 markdown: kramdown
