--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: TeamZero
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   TeamZero
-baseurl: "/TeamZero.github.io" # the subpath of your site, e.g. /blog/
-url: "https://jenwill394.github.io/TeamZero.github.io" # the base hostname & protocol for your site
+baseurl: "/" # the subpath of your site, e.g. /blog/
+url: "https://TeamZero" # the base hostname & protocol for your site
 markdown: kramdown
